# ifrit-protocol

./: .gitignore  CLAUDE.md
apps/python/: pyproject.toml
apps/python/SpellCircle/: Box.py  Point.py  Scene.py  Vec2.py  __init__.py  builder.py  canvas.py  network.py
apps/python/SpellCircle/test/: animate_spell_circles.py  send_spell_circles.py
apps/spell-circle/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
apps/spell-circle-canvas/: .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  README.md  vcpkg-configuration.json  vcpkg.json
apps/spell-circle-canvas/cmake/: ExtractSketchFlags.cmake  FetchAssets.cmake  FindUltralight.cmake
apps/spell-circle-canvas/scripts/: regen_flatbuffers.sh  setup.py
apps/spell-circle-canvas/src/: CMakeLists.txt  Main.qml  SettingsWindow.qml  SquareButton.qml  main.cpp
apps/spell-circle-canvas/src/common/compose/: API.md  CMakeLists.txt  Compose.cpp  ComposeInternal.h  ComposeRuntime.h  Composer.cpp  DESIGN.md  Derive.cpp  EXTRACT.md  Layout.cpp  Material.cpp  Ocio.cpp  Paint.cpp  Query.cpp  REFERENCES.md  REVIEW.md  ROADMAP.md  Reconcile.cpp  STRESS_TESTS.md  Transitions.cpp
apps/spell-circle-canvas/src/common/image/: CMakeLists.txt  Decode.cpp  ImageAsset.cpp
apps/spell-circle-canvas/src/common/loader/: CMakeLists.txt  Decode.cpp  Hub.cpp
apps/spell-circle-canvas/src/common/motion/: CMakeLists.txt  FrameClock.cpp  Ticker.cpp
apps/spell-circle-canvas/src/common/poster/: API.md  CMakeLists.txt  COMPONENTS.md  DESIGN.md
apps/spell-circle-canvas/src/common/scry/: CMakeLists.txt  README.md  UltralightPlatform.cpp  WebEngine.cpp  WebGpuDriver.h  WebImage.cpp  WebInternal.h  WebView.cpp
apps/spell-circle-canvas/src/common/skia/: CMakeLists.txt  SkiaGraphiteContextCommon.cpp  SkiaGraphiteContextMetal.mm  SkiaGraphiteContextVulkan.cpp  SkiaOffscreenSurfaceCommon.cpp  SkiaOffscreenSurfaceMetal.mm  SkiaOffscreenSurfaceVulkan.cpp
apps/spell-circle-canvas/src/common/tick/: CMakeLists.txt  FrameClock.cpp  Ticker.cpp
apps/spell-circle-canvas/src/common/ui/: Checkerboard.qml  FontFamilyField.qml  FontSelector.qml  GlassPanel.qml  PanZoomCanvas.qml  Theme.qml  WindowChrome.h  WindowChrome.mm  WindowChromeStub.cpp
apps/spell-circle-canvas/src/common/ultralight/: CMakeLists.txt  README.md  UltralightPlatform.cpp  WebEngine.cpp  WebGpuDriver.h  WebImage.cpp  WebInternal.h  WebView.cpp
apps/spell-circle-canvas/src/common/web/: CMakeLists.txt  README.md  UltralightPlatform.cpp  WebEngine.cpp  WebGpuDriver.h  WebImage.cpp  WebInternal.h  WebView.cpp
apps/spell-circle-canvas/src/gallery/: CMakeLists.txt  GalleryScenes.cpp  GalleryView.cpp  Main.qml  gallery_main.cpp
apps/spell-circle-canvas/src/gallery/include/: GalleryScenes.h  GalleryView.h  SceneRegistry.h
apps/spell-circle-canvas/src/gallery/scenes/: EffectsParts.h  EffectsScene.cpp  EffectsStressScene.cpp  ExclusionsScene.cpp  HyperScriptsScene.cpp  KnuthPlassScene.cpp  LoopScene.cpp  LoudShadersScene.cpp  MarkersScene.cpp  OverflowScene.cpp  RainScene.cpp  RippleScene.cpp  SceneFactories.h  SceneSupport.cpp  SceneSupport.h  SlotsScene.cpp  VerticalScene.cpp
apps/spell-circle-canvas/src/mac/: CMakeLists.txt
apps/spell-circle-canvas/src/mac/bridge/: SCKEngine.mm
apps/spell-circle-canvas/src/model/: CMakeLists.txt  GraphicsConfig.cpp  Models.cpp  SpellCircleModel.cpp
apps/spell-circle-canvas/src/model/include/: FontDatabase.h  Models.h  SpellCircleModel.h
apps/spell-circle-canvas/src/net/: CMakeLists.txt
apps/spell-circle-canvas/src/network/: CMakeLists.txt  GraphicsConfig.cpp  NetworkManager.cpp  SpellCircleModel.cpp
apps/spell-circle-canvas/src/network/include/: GraphicsConfig.h  Models.h  NetworkManager.h
apps/spell-circle-canvas/src/painting/: CMakeLists.txt
apps/spell-circle-canvas/src/painting/qtcanvas/: CMakeLists.txt  QTextPathPainter.cpp
apps/spell-circle-canvas/src/platform/: AppNap.mm  CMakeLists.txt
apps/spell-circle-canvas/src/platform/include/: AppNap.h
apps/spell-circle-canvas/src/platform/skia/: CMakeLists.txt  SkiaGraphiteContext.mm  SkiaGraphiteContextCommon.cpp  SkiaGraphiteContextMetal.mm  SkiaGraphiteContextVulkan.cpp  SkiaOffscreenSurface.mm  SkiaOffscreenSurfaceMetal.mm  SkiaQtInteropMetal.mm
apps/spell-circle-canvas/src/qml/: CMakeLists.txt
apps/spell-circle-canvas/src/qml/SpellCircle/: CMakeLists.txt  QCanvasPainterSceneBackend.cpp  (+5 more)
apps/spell-circle-canvas/src/scene/: CMakeLists.txt  SceneLabels.cpp  SceneRenderer.cpp
apps/spell-circle-canvas/src/sigilweave/: CMakeLists.txt  Flow.cpp  FontContext.cpp  FontContextImpl.h  KnuthPlass.cpp  Paragraph.cpp  ParagraphLayout.cpp  ParagraphLayoutInternal.h  Query.cpp  README.md  Shaper.cpp  SingleLineParagraphCache.cpp
apps/spell-circle-canvas/src/spellcircle/: CMakeLists.txt
apps/spell-circle-canvas/src/text/: CMakeLists.txt  Doxyfile  Flow.cpp  FontContext.cpp  FontContextImpl.h  KnuthPlass.cpp  Labels.cpp  Layout.cpp  LayoutInternal.h  PaintShaders.cpp  Paragraph.cpp  ParagraphLayout.cpp  ParagraphLayoutInternal.h  Query.cpp  README.md  Shaper.cpp  SingleLineParagraphCache.cpp
apps/spell-circle-canvas/src/textflow/: CMakeLists.txt  Doxyfile  FontContext.cpp  FontContextImpl.h  KnuthPlass.cpp  Paragraph.cpp  ParagraphLayoutInternal.h  Query.cpp  README.md  Shaper.cpp  SingleLineParagraphCache.cpp
apps/spell-circle/.zed/: debug.json
apps/spell-circle/scripts/: animate_spell_circles.py  sc_builder.py  sc_canvas.py  sc_network.py  send_spell_circles.py  test_sender.py
apps/spell-circle/scripts/SpellCircle/: Box.py  Circle.py  Edge.py  Scene.py
apps/spell-circle/src/: CMakeLists.txt  FontFamilyField.qml  Main.qml  SettingsWindow.qml  main.cpp
apps/spell-circle/src/network/: CMakeLists.txt  FeedModel.cpp  FeedModel.h  GraphicsConfig.cpp  Models.cpp  NetworkManager.cpp  SpellCircle.fbs  SpellCircleModel.cpp  SpellCircle_generated.h
touchdesigner/: .gitignore  TDPyEnvManagerContext.yaml  ifrit-protocol.toe  pyproject.toml
touchdesigner/scripts/: configure_editors.py  pyproject.toml  spell_circle.py  test.py
(+497 files in other folders)
