[project]
name = "ifrit-protocol-apps"
version = "0.1.0"
description = "SpellCircle FlatBuffers scene authoring + network API"
requires-python = ">=3.11"
dependencies = [
    "flatbuffers",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["SpellCircle"]
